<resources>
    <!--app name-->
    <string name="app_name">Image Painting</string>

    <!--screen name-->
    <string name="SplashScreen_name">Splash Screen</string>
    <string name="LedScreen_name"> Led Screen</string>
    <string name="SettingsScreen_name"> Settings Screen</string>
    <string name="UdpScreen_name"> UDP Screen</string>
    <string name="BluetoothScreen_name"> Bluetooth Screen</string>

    <!--Led screen-->
    <string name="action_settings"> Settings </string>
    <string name="radioButtonRepeat"> Repeat </string>
    <string name="radioButtonBounce"> Bounce </string>
    <string name="radioButtonInvert"> Invert </string>
    <string name="radioButtonEndOff"> End Off </string>

    <!--Settings screen-->
    <string name="textViewSettings"> Settings</string>
    <string name="textViewImage"> Image</string>
    <string name="imageView"> imageView </string>

    <!--UDP screen-->
    <string name="textViewAddress"> Address</string>
    <string name="textViewPort"> Port </string>
    <string name="editText"> editText </string>
    <string name="textViewTest"> Test </string>
    <string name="buttonTest"> Test </string>

    <!--Bluetooth screen-->
    <string name="textViewBluetooth"> Bluetooth</string>

</resources>
