<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".UdpScreen">


    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonReturn"
        android:orientation="horizontal">

           <Button
        android:id="@+id/buttonUdp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/udp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/editText"
                android:digits="0123456789."
                android:ems="10"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/textViewPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewPort"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/editTextPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/editText"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>