<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SettingsScreen">


    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back" />

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonReturn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/textViewSettings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:id="@+id/LinearLayoutPixels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSettings"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPixels1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@drawable/pixel" />

        <SeekBar
            android:id="@+id/seekBarPixels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="200"
            android:progress="1" />

        <Button
            android:id="@+id/buttonPixels2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@drawable/emptypixel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutPixels"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonRepeat1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@drawable/repeat" />

        <SeekBar
            android:id="@+id/seekBarRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="20"
            android:progress="1" />

        <Button
            android:id="@+id/buttonRepeat2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@drawable/emptyrepeat" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewImage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/LinearLayoutRepeat"/>

    <LinearLayout
        android:id="@+id/LinearLayoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewImage"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/image" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonFolder"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/folder" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutImage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutImage"
        android:gravity="top"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <ImageView
            android:id="@+id/imageViewImageSelect"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageView"
            app:srcCompat="@drawable/pacman" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

</RelativeLayout>